trying to fix css error on safari

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -40,6 +40,25 @@
   object-fit: cover;
 }
 
+@media not all and (min-resolution:.001dpcm) { 
+  @supports (-webkit-appearance:none) {
+    .navbar-logo {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    
+    .navbar-dark .navbar-container .navbar-logo .logo-image,
+    .navbar .navbar-container .navbar-logo .logo-image {
+      height: 70%;
+      width: 100%;
+      object-fit: cover;
+    } 
+  }
+}
+
 .navbar-links {
   height: 100%;
 }
